test/visibility/import/relative/import-relative-error6.good
import-relative-error6.chpl:4: error: 'super.' can only be used as prefix of import
