test/visibility/import/relative/import-relative-error6.chpl
module M {

  module K {
    import super;
  }
  import this.K;
}
